# VkdtAndroidTest

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/github/paolodepetrillo/vkdtandroidtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: .gitignore
app/src/main/cpp/: CMakeLists.txt  gen_vkdtbase.sh  native-lib.cpp  vkdt_config.mk.in  vkdtlib.cpp
app/src/main/java/com/github/paolodepetrillo/vkdtandroidtest/: BitmapWrapper.kt  ImageFileInfo.kt  MainActivity.kt  MainApplication.kt  MainModule.kt  MainViewModel.kt  VkdtBase.kt
app/src/main/java/com/github/paolodepetrillo/vkdtandroidtest/vkdt/: DtModuleId.kt  DtToken.kt  PixelSize.kt  VkdtBase.kt  VkdtGraph.kt  VkdtLib.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/github/paolodepetrillo/vkdtandroidtest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
